k8s_manifests/admin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      serviceAccountName: spring-cloud-kubernetes
      containers:
      - name: admin
        image: ynaji80/admin
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  type: NodePort
  selector:
    app: admin
  ports:
    - port: 8080
      targetPort: 8080
