k8s_manifests/deployment-service.yaml

apiVersion: v1
kind: Service 
metadata:
  name: javaapp-svc
spec:
  selector:
    app: javaapp
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080 
  type: LoadBalancer
