k8s_manifests/gateway.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: spring-cloud-kubernetes
      containers:
      - name: gateway
        image: ynaji80/gateway
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: gateway
  type: NodePort
