k8s_manifests/organization.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization
  labels:
    app: organization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization
  template:
    metadata:
      labels:
        app: organization
    spec:
      serviceAccountName: spring-cloud-kubernetes
      containers:
      - name: organization
        image: ynaji80/organization
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: organization
  labels:
    app: organization
    spring-boot: "true"
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: organization
  type: ClusterIP
